--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="styles.css" />
-  <title>Dom Challenge</title>
+  <script defer type="text/javascript" src="./src/index.js"></script>
+  <title>Simon Project</title>
 </head>
 <body>
 <!--
