--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <!--
   <script src="js/index.min.js"></script>
   <script src="js/challenge.js"></script> -->
+  <div id="toy-collection"></div>
 </body>
 </html>
