--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <!--
   <script src="js/index.min.js"></script>
   <script src="js/challenge.js"></script> -->
+  <div id="simon-header">
+    <h1>Simon...ish<br></h1> 
+  </div>
+  <p style="text-align-center" ><h1 id="high-score">High Score: 0</h1></p>
+  <p style="text-align-center"><h1 id="score"> Score: 0 </h1></p>
   <div id="button-collection"></div>
+  <p style="text-align:center">
+    <button id="start-game">Start</button>
+  </p>
+  <img id="loser-x" src="./src/Family_Feud_Strike_Indicator.webp" alt="Loser" width="125" height="150" class="center" style="display:none">
 </body>
 </html>
