Adds button to choose configuring buttons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <div id="simon-header">
     <h1>Simon...ish<br></h1> 
   </div>
+  <p style="text-align:center">
+    <button id="new-toy-btn">Configure Your Buttons!</button>
+  </p>
   <p style="text-align-center" ><h1 id="high-score">High Score: 0</h1></p>
   <p style="text-align-center"><h1 id="score"> Score: 0 </h1></p>
   <div id="button-collection"></div>
