Enables div to appear that conains configuration forms.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,34 @@
   <p style="text-align:center">
     <button id="new-toy-btn">Configure Your Buttons!</button>
   </p>
+  <div class="container">
+    <form class="configure-buttons-form">
+      <h3>Create a toy!</h3>
+
+      <input
+        type="text"
+        name="name"
+        value=""
+        placeholder="Enter a toy's name..."
+        class="input-text"
+      />
+      <br />
+      <input
+        type="text"
+        name="image"
+        value=""
+        placeholder="Enter a toy's image URL..."
+        class="input-text"
+      />
+      <br />
+      <input
+        type="submit"
+        name="submit"
+        value="Create Toy"
+        class="submit"
+      />
+    </form>
+  </div>
   <p style="text-align-center" ><h1 id="high-score">High Score: 0</h1></p>
   <p style="text-align-center"><h1 id="score"> Score: 0 </h1></p>
   <div id="button-collection"></div>
