--- a/index.html
+++ b/index.html
@@ -9,37 +9,69 @@
 <!--
   <script src="js/index.min.js"></script>
   <script src="js/challenge.js"></script> -->
-  <div id="simon-header">
-    <h1>Simon...ish<br></h1> 
-  </div>
-</div>
-<p style="text-align-center" ><h1 id="high-score">High Score: 0</h1></p>
-<p style="text-align-center"><h1 id="score"> Score: 0 </h1></p>
-<p style="text-align:center">
-  <button id="start-game">Start</button>
-</p>
-<div id="button-collection"></div>
+    <div id="simon-header">
+        <h1>Simon...ish<br></h1> 
+    </div>
+    </div>
+    <p style="text-align-center" ><h1 id="high-score">High Score: 0</h1></p>
+        <p style="text-align-center"><h1 id="score"> Score: 0 </h1></p>
+        <p style="text-align:center">
+        <button id="start-game">Start</button>
+        </p>
+    <div id="button-collection"></div>
 
-  <p style="text-align:center">
-    <button id="new-toy-btn">Configure Your Buttons!</button>
-  </p>
-  <div class="container">
-    <form id="button1-form">
-        <p>Choose the button1 frequency</p>
-        <input type="radio" name="button1-waveform" id="sine" value="sine">
-        <label for="sine">sine</label><br>
+    <p style="text-align:center">
+        <button id="new-toy-btn">Configure Your Buttons!</button>
+    </p>
+<!--  <div class="container"> -->
+    <div class="form-container">
+        <form id="button1-form" display="inline-block" width:100px">
+            <p>Button1 waveform&nbsp;&nbsp</p>
+            <input type="radio" name="button1-waveform" id="sine" value="sine">
+            <label for="sine">sine</label><br>
+            <input type="radio" name="button1-waveform" id="square" value="square">
+            <label for="sine">square</label><br>
+            <input type="radio" name="button1-waveform" id="sawtooth" value="sawtooth">
+            <label for="sine">sawtooth</label><br>
+            <input type="radio" name="button1-waveform" id="triangle" value="triangle">
+            <label for="sine">triangle</label><br>
+      
 
-        <input type="radio" name="button1-waveform" id="square" value="square">
-        <label for="sine">square</label><br>
-        <input type="radio" name="button1-waveform" id="sawtooth" value="sawtooth">
-        <label for="sine">sawtooth</label><br>
-        <input type="radio" name="button1-waveform" id="triangle" value="triangle">
-        <label for="sine">triangle</label><br>
+            <p></p>
+            <label for="button1-color">Button1 color</label>
+            <select name="button-1-color-pulldown" id="button1-color">
+                <option>red</option>
+                <option>blue</option>
+               <option>green</option>
+                <option>yellow</option>
+                <option>purple</option>
+                <option>turquoise</option>
+                <option>orange</option>
+                <option>burlywood</option>
+            </select>
+            <p></p>
+            <input type="submit">  
+        </form>
+    </div>
+    <div style="float:left;">
+
+        <form id="button2-form" style="display:inline; width:10rem">
+            <p>Button2 waveform&nbsp;&nbsp</p>
+            <input type="radio" name="button2-waveform" id="sine" value="sine">
+            <label for="sine">sine</label><br>
+
+            <input type="radio" name="button2-waveform" id="square" value="square">
+            <label for="sine">square</label><br>
+            <input type="radio" name="button2-waveform" id="sawtooth" value="sawtooth">
+            <label for="sine">sawtooth</label><br>
+            <input type="radio" name="button2-waveform"  id="triangle" value="triangle">
+            <label for="sine">triangle</label><br>
+            <input type="submit"
+        </form>
+    </div>
 
         
-    </form>
-  </div>
- 
-  <img id="loser-x" src="./src/Family_Feud_Strike_Indicator.webp" alt="Loser" width="125" height="150" class="center" style="display:none">
+
+    <img id="loser-x" src="./src/Family_Feud_Strike_Indicator.webp" alt="Loser" width="125" height="150" class="center" style="display:none">
 </body>
 </html>
