Adds 2 button configuration forms side by side.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!--  <div class="container"> -->
     <div class="form-container">
         <form id="button1-form" display="inline-block" width:100px">
-            <p>Button1 waveform&nbsp;&nbsp</p>
+            <p>Button1 waveform</p>
             <input type="radio" name="button1-waveform" id="sine" value="sine">
             <label for="sine">sine</label><br>
             <input type="radio" name="button1-waveform" id="square" value="square">
@@ -38,7 +38,9 @@
       
 
             <p></p>
-            <label for="button1-color">Button1 color</label>
+            <strong>
+                <label for="button1-color">Button1 color</label>
+            </strong>
             <select name="button-1-color-pulldown" id="button1-color">
                 <option>red</option>
                 <option>blue</option>
@@ -50,13 +52,14 @@
                 <option>burlywood</option>
             </select>
             <p></p>
-            <input type="submit">  
-        </form>
+            <input name = "Button 1 Update" type="submit" value="Button 1 Update"> 
+        </form> 
     </div>
-    <div style="float:left;">
-
-        <form id="button2-form" style="display:inline; width:10rem">
-            <p>Button2 waveform&nbsp;&nbsp</p>
+    <div class="form-container">
+        <form id="button2-form" style="display:inline-block">
+            <strong>
+                <p>Button2 waveform</p>
+            </strong>
             <input type="radio" name="button2-waveform" id="sine" value="sine">
             <label for="sine">sine</label><br>
 
@@ -66,7 +69,24 @@
             <label for="sine">sawtooth</label><br>
             <input type="radio" name="button2-waveform"  id="triangle" value="triangle">
             <label for="sine">triangle</label><br>
-            <input type="submit"
+           
+
+            <p></p>
+            <strong>
+                <label for="button2-color">Button2 color</label>
+            </strong>
+            <select name="button-1-color-pulldown" id="button1-color">
+                <option>red</option>
+                <option>blue</option>
+                <option>green</option>
+                <option>yellow</option>
+                <option>purple</option>
+                <option>turquoise</option>
+                <option>orange</option>
+                <option>burlywood</option>
+            </select>
+            <p></p>
+            <input name = "Button 2 Update" type="submit" value="Button 2 Update">
         </form>
     </div>
 
