Centers the game buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p style="text-align:center;">
         <button id="start-game">Start</button>
     </p>
-    <div id="button-collection"></div>
+    <div id="button-collection" style="text-align:center;"></div>
 
     <p style="text-align:center">
         <button id="config-btn">Configure Game Buttons!</button>
